--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.markiewb.plugins.netbeans</groupId>
-    <artifactId>ResourceHyperlink4Java</artifactId>
+    <artifactId>ResourceHyperlinkAtCursor</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>nbm</packaging>
 
-    <name>ResourceHyperlink4Java</name>
+    <name>ResourceHyperlinkAtCursor</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
