support files from project source root, ask user to choose from list if multiple matches

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,21 @@
             <artifactId>org-openide-util-lookup</artifactId>
             <version>RELEASE721</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-modules-projectapi</artifactId>
+            <version>RELEASE721</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-modules-java-project</artifactId>
+            <version>RELEASE721</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-dialogs</artifactId>
+            <version>RELEASE721</version>
+        </dependency>
     </dependencies>
 
     <build>
