--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,15 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.markiewb.plugins.netbeans</groupId>
-    <artifactId>ResourceHyperlinkAtCursor</artifactId>
+    <groupId>de.markiewb.netbeans.plugins</groupId>
+    <artifactId>open-file-at-cursor-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>nbm</packaging>
-
-    <name>ResourceHyperlinkAtCursor</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.run.params.ide/>
-        <netbeans.run.params>-J-noverify -J-Xbootclasspath/p:C:\Users\markiewb\AppData\Local\Temp\rebelboot.jar -J-javaagent:C:\Users\markiewb\AppData\Roaming\NetBeans\7.4\jrebel\jrebel.jar -J-Drebel.log=true  ${netbeans.run.params.ide}</netbeans.run.params>
+        <netbeans.run.params>${netbeans.run.params.ide}</netbeans.run.params>
     </properties>
 
     <repositories>
@@ -111,8 +109,16 @@
                 <artifactId>nbm-maven-plugin</artifactId>
                 <version>3.11.1</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <!-- keep it for backwards compatibility to previous versions-->
+                    <codeNameBase>open.file.at.cursor.plugin</codeNameBase>
+                    <licenseFile>LICENSE-2.0.txt</licenseFile>
+                    <author>Benno Markiewicz (benno.markiewicz@googlemail.com)</author>
+                    <homePageUrl>https://github.com/markiewb/nb-resource-hyperlink-at-cursor</homePageUrl>
+                    <keystore>nbproject/private/keystore</keystore>
+                    <licenseName>Apache 2.0</licenseName>
+                </configuration>
             </plugin>
-
             <plugin>
                 <!-- NetBeans 6.9+ requires JDK 6, starting NetBeans 7.4 source 1.7 will be required   -->
                 <groupId>org.apache.maven.plugins</groupId>
@@ -135,4 +141,28 @@
             </plugin>
         </plugins>
     </build>
+    <name>Open File At Cursor Plugin</name>
+    <description>This plugin adds hyperlinks to filenames within String literals of Java sources. If you click the hyperlink, then the file will be opened in the NetBeans editor.
+
+&lt;p&gt;
+Features:
+&lt;ul&gt;
+&lt;li&gt;Supports relative paths regarding to the current file&lt;/li&gt;
+&lt;li&gt;Supports relative paths regarding to the current project (source, test and resources roots)&lt;/li&gt;
+&lt;li&gt;Supports absolute paths&lt;/li&gt;
+&lt;/ul&gt;
+
+
+&lt;/p&gt;
+
+&lt;img src="https://raw.github.com/markiewb/nb-resource-hyperlink-at-cursor/master/doc/screenshot-1.0.0.png"/&gt;
+
+&lt;h2&gt;Updates in 1.0.0:&lt;/h2&gt;
+&lt;ul&gt;
+&lt;li&gt;initial version - implements the RFE  &lt;a href="https://netbeans.org/bugzilla/show_bug.cgi?id=237902"&gt;https://netbeans.org/bugzilla/show_bug.cgi?id=237902&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+
+&lt;p&gt;Provide defects, request for enhancements and feedback at &lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues"&gt;https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;Compatible to &gt;=NB 7.2.1&lt;/p&gt;
+&lt;p&gt;Legal disclaimer: Code is licensed under Apache 2.0.&lt;/p&gt;</description>
 </project>
