--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>org-openide-dialogs</artifactId>
             <version>RELEASE721</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-modules-options-api</artifactId>
+            <version>RELEASE721</version>
+        </dependency>
     </dependencies>
 
     <build>
