--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.run.params.ide/>
-        <netbeans.run.params>-J-javaagent:C:\Users\markiewb\AppData\Roaming\NetBeans\8.0\jrebel\jrebel.jar -J-Xbootclasspath/p:C:\Users\markiewb\AppData\Local\Temp\rebelboot.jar ${netbeans.run.params.ide}</netbeans.run.params>
+        <!--<netbeans.run.params>-J-javaagent:C:\Users\markiewb\AppData\Roaming\NetBeans\8.0\jrebel\jrebel.jar -J-Xbootclasspath/p:C:\Users\markiewb\AppData\Local\Temp\rebelboot.jar ${netbeans.run.params.ide}</netbeans.run.params>-->
     </properties>
 
     <repositories>
