--- a/pom.xml
+++ b/pom.xml
@@ -203,5 +203,9 @@ Features:
 
 &lt;p&gt;Provide defects, request for enhancements and feedback at &lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues"&gt;https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues&lt;/a&gt;&lt;/p&gt;
 &lt;p&gt;Compatible to &gt;=NB 7.2.1&lt;/p&gt;
-&lt;p&gt;Legal disclaimer: Code is licensed under Apache 2.0.&lt;/p&gt;</description>
+&lt;p&gt;Legal disclaimer: Code is licensed under Apache 2.0.&lt;/p&gt;
+&lt;p&gt;
+&lt;a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=K4CMP92RZELE2"&gt;&lt;img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0"&gt;&lt;/a&gt;
+&lt;/p&gt;
+</description>
 </project>
