--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.markiewb.netbeans.plugins</groupId>
     <artifactId>open-file-at-cursor-plugin</artifactId>
-    <version>1.3.0.1-SNAPSHOT</version>
+    <version>1.3.0.2-SNAPSHOT</version>
     <packaging>nbm</packaging>
 
     <properties>
@@ -190,6 +190,7 @@ Features:
 &lt;h2&gt;Updates in 1.3.0:&lt;/h2&gt;
 &lt;ul&gt;
 &lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/12"&gt;Feature 12&lt;/a&gt;]:  Support fully qualified classnames&lt;/li&gt;
+&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/14"&gt;Feature 14&lt;/a&gt;]:  Search for classname in dependencies too (only works for dependencies with sources)&lt;/li&gt;
 &lt;/ul&gt;
 
 &lt;h2&gt;Updates in 1.2.2:&lt;/h2&gt;
