--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.markiewb.netbeans.plugins</groupId>
     <artifactId>open-file-at-cursor-plugin</artifactId>
-    <version>1.3.0.4-SNAPSHOT</version>
+    <version>1.3.0.5-SNAPSHOT</version>
     <packaging>nbm</packaging>
 
     <properties>
@@ -193,6 +193,8 @@ Features:
 &lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/12"&gt;Feature 12&lt;/a&gt;]:  Support fully qualified classnames&lt;/li&gt;
 &lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/14"&gt;Feature 14&lt;/a&gt;]:  Search for classname in dependencies too (only works for dependencies with sources)&lt;/li&gt;
 &lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/10"&gt;Feature 10&lt;/a&gt;]:  Find files in same package but different source root&lt;/li&gt;
+&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/16"&gt;Issue 16&lt;/a&gt;]:  Make the hyperlinking faster / use less IO&lt;/li&gt;
+
 &lt;/ul&gt;
 
 &lt;h2&gt;Updates in 1.2.2:&lt;/h2&gt;
