--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.markiewb.netbeans.plugins</groupId>
     <artifactId>open-file-at-cursor-plugin</artifactId>
-    <version>1.3.0.5-SNAPSHOT</version>
+    <version>1.3.0.6</version>
     <packaging>nbm</packaging>
 
     <properties>
