--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.markiewb.netbeans.plugins</groupId>
     <artifactId>open-file-at-cursor-plugin</artifactId>
-    <version>1.3.0.6</version>
+    <version>1.3.1.0</version>
     <packaging>nbm</packaging>
 
     <properties>
@@ -187,6 +187,11 @@ Features:
 &lt;/p&gt;
 
 &lt;img src="https://raw.github.com/markiewb/nb-resource-hyperlink-at-cursor/master/doc/screenshot-1.0.0.png"/&gt;
+
+&lt;h2&gt;Updates in 1.3.1:&lt;/h2&gt;
+&lt;ul&gt;
+&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/18"&gt;Issue 18&lt;/a&gt;]:  NPE when pressing CTRL in the diff dialog&lt;/li&gt;
+&lt;/ul&gt;
 
 &lt;h2&gt;Updates in 1.3.0:&lt;/h2&gt;
 &lt;ul&gt;
