--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,18 @@
             <version>RELEASE721</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -188,6 +200,7 @@ Features:
 &lt;h2&gt;Updates in 1.3.2:&lt;/h2&gt;
 &lt;ul&gt;
 &lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/3"&gt;Issue 3&lt;/a&gt;]:  Fixed freeze&lt;/li&gt;
+&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-resource-hyperlink-at-cursor/issues/19"&gt;Issue 19&lt;/a&gt;]:  Fixed java.lang.AssertionError: Need to normalize ..., when there is a colon in the string #19&lt;/li&gt;
 &lt;/ul&gt;
 
 &lt;h2&gt;Updates in 1.3.1:&lt;/h2&gt;
